Bug 92047 - icon and function "format area" disabled
Summary: icon and function "format area" disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords: bibisected, regression
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-06-13 13:25 UTC by Thomas Krumbein
Modified: 2016-10-25 19:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
disabled format area (73.94 KB, image/jpeg)
2015-06-13 13:25 UTC, Thomas Krumbein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Krumbein 2015-06-13 13:25:43 UTC
Created attachment 116499 [details]
disabled format area

In Calc, icon and function "format area" is disabled. See attached screenshot.

My System: Win 8.1, 64 Bit, LibO 5.0.0.0. beta3

Version: 5.0.0.0.beta3 (x64)
Build-ID: 96345c15d8ab19c49014f055fe41ba8e1f421e5c
Gebietsschema: de-DE (de_DE)
Comment 1 Buovjaga 2015-06-13 17:12:31 UTC
Not only Calc, I don't see it active anywhere in LibO.
https://help.libreoffice.org/Writer/Applying_Styles_in_Fill_Format_Mode

Works ok in 4.4, regression.

Win 7 Pro 64-bit
Version: 5.1.0.0.alpha1+
Build ID: d56b125f6c6c18ac40712cefc3cec06530750e15
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-13_07:08:43
Locale: fi-FI (fi_FI)

Ubuntu 15.04 64-bit 
Version: 4.4.2.2
Build ID: 40m0(Build:2)
Locale: en_US

Version: 5.1.0.0.alpha1+
Build ID: a9286c302e96258f32d13fb66aced25750e82cd3
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-06-13_00:35:08
Locale: en-US (en_US.UTF-8)
Comment 2 Terrence Enger 2015-06-14 17:29:52 UTC
Working in the 50max bibisect repository, I see from `git bisect good`...

    442746c7621790af396a8b6b39c0ccebab02916c is the first bad commit
    commit 442746c7621790af396a8b6b39c0ccebab02916c
    Author: Matthew Francis <mjay.francis@gmail.com>
    Date:   Wed May 27 22:10:17 2015 +0800

        source-hash-aef1826d9ca318a1359a2116e7f146e993413234
    
        Bibisect: This commit covers the following irrelevant source commit(s)
        ce82146a6be87b239a0bde0b59fddf8865290b99
    
        commit aef1826d9ca318a1359a2116e7f146e993413234
        Author:     Stephan Bergmann <sbergman@redhat.com>
        AuthorDate: Tue Apr 28 16:17:40 2015 +0200
        Commit:     Stephan Bergmann <sbergman@redhat.com>
        CommitDate: Tue Apr 28 16:18:02 2015 +0200
    
            default initialization of object of const type w/o user-provided default ctor
    
            Change-Id: I99266457d43f9279af32d75d2842480291b6e91d

    :040000 040000 3ba9c7ffb8ba3e8a80c51e6891fa2d2d05a39d79 aef41b62e2a68b93f18200b053cd5ce3de2afc59 M	opt

and from `git bisect log` ...

    # bad: [dda106fd616b7c0b8dc2370f6f1184501b01a49e] source-hash-0db96caf0fcce09b87621c11b584a6d81cc7df86
    # good: [5b9dd620df316345477f0b6e6c9ed8ada7b6c091] source-hash-2851ce5afd0f37764cbbc2c2a9a63c7adc844311
    git bisect start 'latest' 'oldest'
    # good: [0c30a2c797b249d0cd804cb71554946e2276b557] source-hash-45aaec8206182c16025cbcb20651ddbdf558b95d
    git bisect good 0c30a2c797b249d0cd804cb71554946e2276b557
    # good: [2ce02b2ce56f12b9fcb9efbd380596975a3a5686] source-hash-17d714eef491bda2512ba8012e5b3067ca19a5be
    git bisect good 2ce02b2ce56f12b9fcb9efbd380596975a3a5686
    # bad: [40875247f0002056effdf6d2fbe43627691cd86c] source-hash-93f0b14458a618ad575cd446680e5c4aa7d87bdc
    git bisect bad 40875247f0002056effdf6d2fbe43627691cd86c
    # good: [07e62597be0600b763c4d18204799dcf09d2d3d9] source-hash-b2ead407c70f71974a1eac79df09072ff8bd0cc2
    git bisect good 07e62597be0600b763c4d18204799dcf09d2d3d9
    # good: [160904095d61878ae1483787bf25f4c4148365e4] source-hash-2049e3ec22db0684683261746188b40428a0d0e2
    git bisect good 160904095d61878ae1483787bf25f4c4148365e4
    # bad: [957b579081899413657c40feb8b41b5a43a8e55b] source-hash-74706c4057e027898022ac42de210302cdc92d99
    git bisect bad 957b579081899413657c40feb8b41b5a43a8e55b
    # bad: [4daa0b0b691bfc36e5924f61cc046142845c5d70] source-hash-f6d4cd396803f568ca667ed5e4d7725ade99b5df
    git bisect bad 4daa0b0b691bfc36e5924f61cc046142845c5d70
    # bad: [27de78aa6a89c81519f7882e2201a2fc4b6c5624] source-hash-f016ed2e4f7b8bec79fcaf8e4b566861a7b6ae76
    git bisect bad 27de78aa6a89c81519f7882e2201a2fc4b6c5624
    # bad: [8536df1e00d1bbdb1c2e66bde9ed551dff1a08d3] source-hash-4de83e2c322509c0fb1b989f7e4898728fc4a408
    git bisect bad 8536df1e00d1bbdb1c2e66bde9ed551dff1a08d3
    # bad: [a8db8c63e0bd595e16fbbffc49911b77bf94da96] source-hash-abce3f30ac8e1c1d40c76de611b6a10d00d7555c
    git bisect bad a8db8c63e0bd595e16fbbffc49911b77bf94da96
    # good: [436a7ed41b8c084b15a17b95027e4d2785a94d97] source-hash-84c73c983577e33dda266bbfcdd89b9e1202906b
    git bisect good 436a7ed41b8c084b15a17b95027e4d2785a94d97
    # bad: [442746c7621790af396a8b6b39c0ccebab02916c] source-hash-aef1826d9ca318a1359a2116e7f146e993413234
    git bisect bad 442746c7621790af396a8b6b39c0ccebab02916c
    # good: [53871cea909a0b86726f189bcfdab2890ffcf9e9] source-hash-a31991c4188e91326941fbe510ce70129d1ccde8
    git bisect good 53871cea909a0b86726f189bcfdab2890ffcf9e9
    # first bad commit: [442746c7621790af396a8b6b39c0ccebab02916c] source-hash-aef1826d9ca318a1359a2116e7f146e993413234
Comment 3 Michael Meeks 2015-06-20 21:19:11 UTC
Almost certainly a vclptr issue then - Stephan's commit is just after that was merged; will take a look.
Comment 4 Michael Meeks 2015-06-26 16:30:29 UTC
TBH I don't really understand this:

sfx2/source/dialog/templdlg.cxx
SfxCommonTemplateDialog_Impl::UpdateStyles_Impl(sal_uInt16 nFlags)

     if(!bWaterDisabled)
         //make sure the watercan is only activated when there is (only) one selection
         bWaterDisabled = pTreeBox || aFmtLb->GetSelectionCount() <= 1;

Looks like a plain logic bug to me; from:

commit 38b8e742872b2cbdba93f4d1b84c8f09b5ab38ff
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Oct 29 13:42:31 2013 +0000

    Related: fdo#67461 consider hierarchical view

Or perhaps I'm confused, its rather unclear to me what changed - but that single line above is apparently the source of the aggravation =) Anyhow - I'm adding a helpful helper to unwind whatever's going on there and clean up the duplicate logic here. hopefully that will help =)
Comment 5 Commit Notification 2015-06-29 08:44:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76837070c7c3eae1da50ff0de5e508be285e22c7

Resolves: tdf#92047 fix wrong merge conflict resolution

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-06-29 08:47:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9e3f0a9d76c0ee4fee2ca1b49328e6eda4b57c0&h=libreoffice-5-0

Resolves: tdf#92047 fix wrong merge conflict resolution

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-06-29 16:50:29 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e7525ac82772d61f3c223216a3297dadf5b1bef

tdf#92047 - cleanup logic.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Terrence Enger 2015-07-01 18:12:19 UTC
For me on (chroot to) debian sid, the problem went away between
dbgutil bibisect versions ...
(*) 2015-06-30, source hash 571f0ab, and
(*) 2015-07-01, source hash 9394362.

This seems strange to me, as I would expect even the earlier of these
to have the fixes in comments 5 and 7.

Terry.
Comment 9 Robinson Tryon (qubit) 2015-12-17 09:13:38 UTC Comment hidden (obsolete)