Resolves: tdf#92047 fix wrong merge conflict resolution

since

commit e8b97a52c96df9c8e8055407b1e40ed7cb9cfc67
Merge: 2b0be6c 0cde74f
Date:   Tue Apr 28 11:41:31 2015 +0100

-         bWaterDisabled = !(pTreeBox || aFmtLb.GetSelectionCount() <= 1);
 -        bWaterDisabled = (pTreeBox || aFmtLb->GetSelectionCount() <= 1) ? sal_False : sal_True;
++        bWaterDisabled = pTreeBox || aFmtLb->GetSelectionCount() <= 1;

Change-Id: I14d848b4527adf05eb05110b93369791134cbe6c